# C2F4DT

./: .gitignore  404.html  CHANGELOG.md  README.md  _code_tree.py  autoapi_unified.py  check_branch.sh  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.cloud2fem/: state.pickle
api/: index.html
api/c2f4dt/: index.html
c2f4dt/: app.py  main_window.py
c2f4dt/plugins/: manager.py
c2f4dt/scripts/: auto_api.py
c2f4dt/ui/: console.py  display_panel.py  import_summary_dialog.py  viewer3d.py
c2f4dt/utils/: icons.py  theme.py
docs/: _autoapi.py  _code_tree.py  api.md  autoapi_unified.py  index.md  specifications.md
docs/api/: c2f4dt.md  index.md
docs/guide/: architecture.md  code_tree.md  console_guide.md  flowchart.md  gui_layout.md  installation.md  overview.md  plugins_developer_guide.md  reference.md  theory.md
extensions/: README.md
guide/architecture/: index.html
guide/code_tree/: index.html
guide/console_guide/: index.html
guide/flowchart/: index.html
guide/gui_layout/: index.html
guide/installation/: index.html
guide/overview/: index.html
guide/plugins_developer_guide/: index.html
guide/reference/: index.html
guide/theory/: index.html
icons/: README.md  create_logos.py
misc/: png2icns.sh
plugins/example_display_button/: plugin.yaml
search/: search_index.json
site/: 404.html  index.html  objects.inv
tests/: armadillo.c2f4dt.json  bunny.ply  save_test.c2f4dt.json  test_4_synthetic_point_cloud_1000.ply  test_import.py  test_multiple_bunny.py  test_plugin.py  test_vtk.py  vtk_import_validator.py
(+131 files in other folders)
